crates/macros/tests/sources/messages-missing-resource.stderr
error: Error processing resource: Error reading resource $DIR/tests/resources/simple-it.ftl
 --> tests/sources/messages-missing-resource.rs:7:9
  |
7 |         ("tests/resources/simple-it.ftl", "it")],
  |         ^

error[E0412]: cannot find type `Messages` in this scope
  --> tests/sources/messages-missing-resource.rs:14:6
   |
14 | impl Messages {
   |      ^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
1  + use std::os::unix::net::Messages;
   |

error[E0433]: failed to resolve: use of undeclared type `Messages`
  --> tests/sources/messages-missing-resource.rs:30:20
   |
30 |     let messages = Messages::default();
   |                    ^^^^^^^^ use of undeclared type `Messages`
   |
help: consider importing this struct
   |
1  + use std::os::unix::net::Messages;
   |
